【2020-04-19】完结撒花，结束了建设spring-cloud，使用了nacos，openfeign

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>order</module>
         <module>storage</module>
         <module>api_test</module>
+        <module>account</module>
     </modules>
 
     <!--统一版本控制-->
